--- a/src/app/layout/page/page.component.html
+++ b/src/app/layout/page/page.component.html
@@ -1,4 +1,4 @@
-<app-header [paramNodeId]="paramNodeId()" [providedLangs]="providedLangs()" />
+<app-header [nodeId]="nodeId()" [providedLangs]="providedLangs()" />
 
 <main>
   <div class="page">
