Name standart for rotor images

--- a/src/app/pages/home/rotor-banner/rotor-banner.component.html
+++ b/src/app/pages/home/rotor-banner/rotor-banner.component.html
@@ -14,13 +14,19 @@
     </div>
     <ul class="splide__list">
       <li class="splide__slide">
-        <img src="/api/image/slider/DJI_0014.webp" />
+        <img src="/api/image/slider/1.webp" />
       </li>
       <li class="splide__slide">
-        <img src="/api/image/slider/DJI_0041.webp" />
+        <img src="/api/image/slider/2.webp" />
       </li>
       <li class="splide__slide">
-        <img src="/api/image/slider/DJI_0069.webp" />
+        <img src="/api/image/slider/3.webp" />
+      </li>
+      <li class="splide__slide">
+        <img src="/api/image/slider/4.webp" />
+      </li>
+      <li class="splide__slide">
+        <img src="/api/image/slider/5.webp" />
       </li>
     </ul>
   </div>
