--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -24,6 +24,26 @@
     background-color: rgba(0, 0, 0, 0.5);
   }
 
+  &__back {
+    grid-row: 1;
+    grid-column: 1 / 4;
+    z-index: 1;
+    padding: 1rem;
+
+    & a {
+      font-size: 2rem;
+      color: var(--white);
+      font-weight: 700;
+    }
+
+    & .back-icon {
+      margin-inline-end: 1rem;
+      width: 1.5rem;
+      height: auto;
+      filter: invert(1);
+    }
+  }
+
   &__banner {
     grid-row: 1 / 4;
     grid-column: 1 / 4;
