--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -5,7 +5,7 @@
   --info: #17a2b8;
   --warning: #ffc107;
   --danger: #dc3545;
-  --light: #f8f9fa;
+  --light: #9d9d9d;
   --dark: #343a40;
   --transparent-dark: rgba(0, 0, 0, 0.9);
   --transparent-medium: rgba(0, 0, 0, 0.5);
