--- a/src/app/blog/article-editor/article-editor.component.html
+++ b/src/app/blog/article-editor/article-editor.component.html
@@ -112,6 +112,11 @@
     }
   </div>
 
+  <div class="form-group">
+    <input type="checkbox" id="top" name="top" [(ngModel)]="top" />
+    <label class="label" for="top">Set as TOP news</label>
+  </div>
+
   <div class="form-group form-group--column">
     <label class="label" for="author">Author:</label>
     <input
