Fix bug with users without rights

--- a/src/app/admin/admin-tools/admin-tools.component.html
+++ b/src/app/admin/admin-tools/admin-tools.component.html
@@ -1,4 +1,4 @@
-@if (userService.isLoggedIn() && nodeId()) {
+@if (userService.isLoggedIn() && nodeId() && isEditable()) {
 <div class="admin-panel">
   <a [routerLink]="['/blog', nodeId()]" class="admin-panel-link">Preview</a>
   <a [routerLink]="['/admin', 'node', nodeId()]" class="admin-panel-link"
