--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -109,7 +109,7 @@
 
   & img {
     max-width: 100%;
-    max-width: 70vh;
+    max-height: 70vh;
     height: auto;
     margin-inline: auto;
     display: block;
