--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -36,8 +36,8 @@
         <span>{{ date() | date : "dd.MM.yyyy" }}</span>
       </p>
     </div>
+    <app-table-of-content id="top" />
     <div
-      id="top"
       class="article__body post"
       [innerHTML]="articleContent() | sanitizeHtml"
     ></div>
