--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -102,6 +102,43 @@
   }
 }
 
+.article {
+  @include desk {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: auto auto auto;
+    gap: 0 1rem;
+  }
+
+  &__tags {
+    @include desk {
+      grid-column: 1 / 3;
+      grid-row: 1;
+    }
+  }
+
+  &__data {
+    @include desk {
+      grid-column: 1 / 3;
+      grid-row: 2;
+    }
+  }
+
+  &__table-of-content {
+    @include desk {
+      grid-column: 2;
+      grid-row: 3;
+    }
+  }
+
+  &__body {
+    @include desk {
+      grid-column: 1;
+      grid-row: 3;
+    }
+  }
+}
+
 .post {
   @include tab {
     font-size: 2rem;
