--- a/src/app/layout/page/page.component.html
+++ b/src/app/layout/page/page.component.html
@@ -1,4 +1,8 @@
-<app-header [nodeId]="nodeId()" [providedLangs]="providedLangs()" />
+<app-header
+  [nodeId]="nodeId()"
+  [providedLangs]="providedLangs()"
+  class="page-header"
+/>
 
 <main>
   <div class="page">
@@ -9,3 +13,5 @@
     </div>
   </div>
 </main>
+
+<app-footer class="page-footer" />
