--- a/src/app/layout/page/page.component.scss
+++ b/src/app/layout/page/page.component.scss
@@ -1,5 +1,27 @@
 @import "../../../styles/breakpoints.scss";
 
+:host {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 1fr;
+  min-height: 100vh;
+}
+
+.page-header {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+main {
+  grid-column: 1;
+  grid-row: 2;
+}
+
+.page-footer {
+  grid-column: 1;
+  grid-row: 3;
+}
+
 .main-content {
   padding-block: 2rem;
 
