Add conformation to article delete action

--- a/src/app/layout/footer/footer.component.scss
+++ b/src/app/layout/footer/footer.component.scss
@@ -2,4 +2,8 @@ footer {
   padding-block: 1rem;
   background-color: var(--black);
   color: var(--white);
+
+  & a {
+    color: var(--primary);
+  }
 }
