Add size attributes to images

--- a/src/app/pages/article/article.component.html
+++ b/src/app/pages/article/article.component.html
@@ -3,6 +3,8 @@
     <div class="pagehero__back">
       <a routerLink="/">
         <img
+          width="100%"
+          height="600px"
           class="back-icon"
           src="assets/images/arrows/back-arrow.svg"
           alt="Back"
