--- a/src/app/blog/blog-list/article-preview/article-preview.component.html
+++ b/src/app/blog/blog-list/article-preview/article-preview.component.html
@@ -8,7 +8,13 @@
   [routerLink]="['/blog', article().url]"
   [class]="{ odd: order() === 'odd', even: order() === 'even' }"
 >
-  <img class="article__img" [src]="articleImg()" [alt]="articleTitle()" />
+  <img
+    width="50%"
+    height="300px"
+    class="article__img"
+    [src]="articleImg()"
+    [alt]="articleTitle()"
+  />
   <div class="article__txt">
     <span class="article__date">{{ articleDate() }}</span>
     <h2 class="article__title">{{ articleTitle() }}</h2>
