--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -63,11 +63,7 @@
     display: block;
     object-fit: cover;
     width: 100%;
-    max-height: calc(100vh * 0.8 - 7rem);
-
-    @include tab {
-      max-height: calc(100vh * 0.8 - 8rem);
-    }
+    height: 600px;
   }
 
   &__title {
