--- a/src/app/pages/home/rotor-banner/rotor-banner.component.html
+++ b/src/app/pages/home/rotor-banner/rotor-banner.component.html
@@ -14,19 +14,19 @@
     </div>
     <ul class="splide__list">
       <li class="splide__slide">
-        <img src="/api/image/slider/1.webp" />
+        <img width="100%" height="600px" src="/api/image/slider/1.webp" />
       </li>
       <li class="splide__slide">
-        <img src="/api/image/slider/2.webp" />
+        <img width="100%" height="600px" src="/api/image/slider/2.webp" />
       </li>
       <li class="splide__slide">
-        <img src="/api/image/slider/3.webp" />
+        <img width="100%" height="600px" src="/api/image/slider/3.webp" />
       </li>
       <li class="splide__slide">
-        <img src="/api/image/slider/4.webp" />
+        <img width="100%" height="600px" src="/api/image/slider/4.webp" />
       </li>
       <li class="splide__slide">
-        <img src="/api/image/slider/5.webp" />
+        <img width="100%" height="600px" src="/api/image/slider/5.webp" />
       </li>
     </ul>
   </div>
