--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -145,7 +145,7 @@
   & img {
     max-width: 100%;
     max-height: 70vh;
-    height: auto;
+    height: auto !important;
     margin-inline: auto;
     display: block;
   }
