--- a/src/app/blog/table-of-content/table-of-content.component.html
+++ b/src/app/blog/table-of-content/table-of-content.component.html
@@ -1,4 +1,6 @@
+@if (headers.length) {
 <h4 class="table-of-content__title" i18n>Table of content</h4>
+}
 <ul class="table-of-content">
   @for (header of headers; track header.id) {
   <li class="table-of-content__item">
