--- a/src/app/blog/tags/tags.component.html
+++ b/src/app/blog/tags/tags.component.html
@@ -4,7 +4,7 @@
     [tag]="tag"
     [langList]="langList()"
     [isAdminMode]="false"
-    [lang]="lang"
+    [lang]="langSwitcherService.lang()"
     (onSelected)="onTagSelected($event)"
   />
   }
