--- a/src/app/blog/article-editor/article-editor.component.html
+++ b/src/app/blog/article-editor/article-editor.component.html
@@ -30,6 +30,9 @@
       [(ngModel)]="metaTitleField"
       (ngModelChange)="onMetaTitleFieldChange()"
     />
+    <strong [class]="{ 'color-danger': metaTitleField.length > 70 }">
+      {{ metaTitleField.length }}/70
+    </strong>
   </div>
 
   <div class="form-group form-group--column">
@@ -41,6 +44,9 @@
       [(ngModel)]="metaDescriptionField"
       (ngModelChange)="onMetaDescriptionFieldChange()"
     ></textarea>
+    <strong [class]="{ 'color-danger': metaDescriptionField.length > 140 }">
+      {{ metaDescriptionField.length }}/140
+    </strong>
   </div>
 
   <div class="form-group">
